[package]
name = "jira"
version = "0.1.0"
authors = ["Tino Rusch <tino.rusch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
reqwest = "*"
serde_json = "1"
serde_yaml = "0.8"
clap = "*"
